Skrevet det sidste til part 2

--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -47,7 +47,7 @@ During the first accelerometer measurements the loudspeaker acts linear with ver
 	\caption{The grey area zoomed in.}
 	\label{fig:raw_driver19_window_zoom_main}
 \end{subfigure}
-\caption{The greyed area is analysed to examine if there are any signs of an impulse.}
+\caption{Raw data from the driver measured by an accelerometer. The greyed area is analysed to examine if there are any signs of an impulse.}
 \label{fig:raw_driver19_windows_main}
 \end{figure}
 
