skrevet til RMS compressor

--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -110,7 +110,7 @@
 
 \include{1Chapters/Limiter/LimiterMAIN}
 
-\include{1Chapters/Model/ModelMAIN}
+\include{1Chapters/RMS/RMSMAIN}
 
 \part{Acceptance Test \& Conclusion}
 
