--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -10,7 +10,6 @@
 \setlength{\headheight}{21pt}
 \hfuzz=\maxdimen
 \tolerance=10000
-
 \hbadness=10000
 %
 \usepackage{siunitx}
@@ -103,6 +102,8 @@
 
 
 \part{Design}
+
+\include{1Chapters/4DesignRealization/designRealization}
 
 \include{1Chapters/Filters/FiltersMAIN}
 
