--- a/Rapport/1Chapters/2Requirements/Requirements.tex
+++ b/Rapport/1Chapters/2Requirements/Requirements.tex
@@ -24,7 +24,7 @@ The processor has been chosen to be a DSP as explained in (\textbf{Processor Pla
 \end{enumerate}
 \end{itemize}
 
-The RMS compressor must have four bands which comply with the class 2 of IEC 6964 standard (2001) as descibed in \autoref{sec:PreAnalysisCon}. These bands must be placed below 500 Hz which was desired by DALI which can me seen in (\textbf{MAIL correnspondance}) and is explained in (\textbf{Multiband vs single band section}). The system must also distort less than soft clipping which is fomulated in the problem statement seen in \autoref{sec:problem_statement} and argued for in \autoref{sec:PreAnalysisCon}.
+The RMS compressor must have four bands which comply with the class 2 of IEC 6964 standard (2001) as descibed in \autoref{app:IEC6964}. These bands must be placed below 500 Hz which was desired by DALI which can me seen in (\textbf{MAIL correnspondance}) and is explained in (\textbf{Multiband vs single band section}). The system must also distort less than soft clipping which is fomulated in the problem statement seen in \autoref{sec:problem_statement} and argued for in \autoref{sec:PreAnalysisCon}.
 
 \begin{itemize}
 \item RMS compressor
