--- a/Rapport/1Chapters/Filters/ReqInterface.tex
+++ b/Rapport/1Chapters/Filters/ReqInterface.tex
@@ -1,11 +1,11 @@
-\section{Requirements \& Interface}
-The requirements originates from IEC 61260 explained in \autoref{ch:requirements} and will therefore not be explained in detail in this section. To sum up the requirements for the filters. 
+\section{Requirements}
+The requirements affecting the filters are as follows:
 
-\begin{itemize}
-\item Table or Picture of the standard
-\end{itemize}
+8. The compressor must have 4 bands. \\
+9. The bands of the compressor must comply with the class 2 of IEC 6964 standard (2001). \\
+10. The compressor must apply to frequencies below 500 Hz. 
  
-These requirements will be used to design the filters. 
 
-For interfacing xxx   
+ 
+ 
 
