Nu kan det også compile

--- a/Rapport/1Chapters/Filters/Design.tex
+++ b/Rapport/1Chapters/Filters/Design.tex
@@ -2,18 +2,15 @@
 This design section will go through the design of the highest lowpass filter with the specification derived from the requirements of band 1 also seen on \autoref{fig:band1_req}.
 \begin{figure}[H]
 \centering
-\begin{subfigure}[t]{0.47\textwidth}
+\begin{subfigure}[t]{0.45\textwidth}
 	\tikzsetnextfilename{Band1Req}
-	\scalebox{0.5}{
-	\input{figures/Band1Req.tex}}
+	\input{figures/Band1Req.tex}
 	\caption{Band 1 requierments.}
 	\label{fig:band1_req}
 \end{subfigure}
-\hspace{6mm} 
-\begin{subfigure}[t]{0.35\textwidth}
+\begin{subfigure}[t]{0.45\textwidth}
 	\tikzsetnextfilename{Band1ReqZoom}
-	\scalebox{0.5}{
-	\input{figures/Band1ReqZoom.tex}}
+	\input{figures/Band1ReqZoom.tex}
 	\caption{Band 1 requierments zoomed in.}
 	\label{fig:band1_reqZoom}
 \end{subfigure}
