--- a/Rapport/1Chapters/Filters/FiltersMAIN.tex
+++ b/Rapport/1Chapters/Filters/FiltersMAIN.tex
@@ -6,7 +6,7 @@ Is was also concluded that the filters used for system should be FIR filters bec
 
 \input{1Chapters/Filters/Design.tex}
 
-\input{1Chapters/Filters/Simulation.tex}
+%\input{1Chapters/Filters/Simulation.tex}
 
 %\input{1Chapters/Filters/Implementation.tex}
 
