Skrevet en masse nyt

--- a/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
+++ b/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
@@ -1,6 +1,13 @@
 \section{Feedback versus Feedforward System} \label{sec:feedback}
 
-At this point it is yet to be determined if the system will be based on a feedback or a feedforward system. The choices are to design a feedback system that will decide what to do, based on real-time measurements from a sensor i.e. accelerometer, or a feedforward system that will analyse an input signal and then decide what to do. Since there are no well documented experiments when concerning with sensors in speaker cabinets further experiments are to be deducted. 
+At this point it is yet to be determined if the system will be based on a feedback or a feedforward system. The choices are to design a feedback system that will decide what to do, based on real-time measurements from a sensor i.e. accelerometer, or a feedforward system that will analyse an input signal and then decide what to do. Since there are no well documented experiments when concerning with sensors in speaker cabinets further experiments are to be deducted. A possible solution for a feedback system is depicted on \autoref{fig:feedbacksystem}. This system depicted will be further investigated to see if plausible.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.75\textwidth]{Feedback_Acc2}
+\caption{How a possible feedback system should be implemented on the speaker}
+\label{fig:feedbacksystem}
+\end{figure}
 
 
 %\subsection{Distortion from vibration and impulses}\label{subsec:impulses}
