filter rapport main

--- a/Rapport/1Chapters/Filters/FiltersMAIN.tex
+++ b/Rapport/1Chapters/Filters/FiltersMAIN.tex
@@ -1,7 +1,7 @@
 \chapter{Filter design}
-This chapter will describe how the filters in the system are designed, in more detail the chapter will examine the requirements, the design and the simulation of the filters. From \textbf{Realization} it was concluded that decimation and interpolation should be used to reduce the order of the filters.  
-Is was also concluded that the filters used for system should be FIR filters because of spectral subtraction which would reduce the number of filters in the system, because they have linear phase and no noise.
-   
+This chapter will describe how the filters in the system are designed, in more detail the chapter will examine the requirements, the design and the simulation of the filters. From \autoref{ch:designRealisation} it was concluded that decimation and interpolation should be used to reduce the order of the filters.  
+Is was also concluded that the filters used for system should be FIR filters because of spectral subtraction which would reduce the number of filters in the system, because they have linear phase and no noise. The requirements affecting the filters are as follows:   
+
 \input{1Chapters/Filters/ReqInterface.tex}
 
 \input{1Chapters/Filters/Design.tex}
