--- a/Rapport/figures/Band1ReqZoom.tex
+++ b/Rapport/figures/Band1ReqZoom.tex
@@ -7,67 +7,78 @@
 \begin{tikzpicture}
 
 \begin{axis}[%
-width=2.3in,
-height=2in,
-at={(0.758in,0.504in)},
+width=2.2in,
+height=1.7in,
+at={(0.758in,0.481in)},
 scale only axis,
 unbounded coords=jump,
 xmode=log,
-xmin=3774.50218155918,
-xmax=9480.85426960068,
+xmin=0.5,
+xmax=2,
 xminorticks=true,
-xlabel={Frequency [Hz]},
+xlabel={Normalized frequency [f/fm]},
 xmajorgrids,
 xminorgrids,
-ymin=-5.26838030133928,
-ymax=1.43014090401786,
-ylabel={Gain [dB]},
+ytick = {2, 0, -2, -04, -6, -8, -10},
+ymin=-10,
+ymax=2,
+ylabel={Relative gain [dB]},
 ymajorgrids,
 axis background/.style={fill=white}
 ]
-\addplot [color=red,solid,forget plot]
+\addplot [color=black!30!red,solid,forget plot]
   table[row sep=crcr]{%
-375	-60\\
-750	-55\\
-1500	-41\\
-3000	-16.5\\
-4242.64068711928	-1.6\\
-4242.64068711928	0.5\\
-4626.63247622382	0.5\\
-5045.37849152229	0.5\\
-5502.02425922803	0.5\\
-6000	0.5\\
-6543.04639599155	0.5\\
-7135.24269001633	0.5\\
-7781.03732790606	0.5\\
-8485.28137423857	0.5\\
-8485.28137423857	-1.6\\
-12000	-16.5\\
-24000	-41\\
-48000	-55\\
-96000	-60\\
+1.4142	-5\\
+1.4142	-10\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black!30!red,solid,forget plot]
   table[row sep=crcr]{%
-375	-inf\\
-750	-inf\\
-1500	-inf\\
-3000	-inf\\
-4242.64068711928	-5\\
-4242.64068711928	-5\\
-4626.63247622382	-1.3\\
-5045.37849152229	-0.6\\
-5502.02425922803	-0.4\\
-6000	-0.3\\
-6543.04639599155	-0.4\\
-7135.24269001633	-0.6\\
-7781.03732790606	-1.3\\
-8485.28137423857	-5\\
-8485.28137423857	-5\\
-12000	-inf\\
-24000	-inf\\
-48000	-inf\\
-96000	-inf\\
+0.7071	-5\\
+0.7071	-10\\
+};
+\addplot [color=black!30!red,solid,forget plot]
+  table[row sep=crcr]{%
+0.0625	-60\\
+0.125	-55\\
+0.25	-41\\
+0.5	-16.5\\
+0.707106781186547	-1.6\\
+0.707106781186547	0.5\\
+0.77110541270397	0.5\\
+0.840896415253715	0.5\\
+0.917004043204671	0.5\\
+1	0.5\\
+1.09050773266526	0.5\\
+1.18920711500272	0.5\\
+1.29683955465101	0.5\\
+1.4142135623731	0.5\\
+1.4142135623731	-1.6\\
+2	-16.5\\
+4	-41\\
+8	-55\\
+16	-60\\
+};
+\addplot [color=black!30!red,solid,forget plot]
+  table[row sep=crcr]{%
+0.0625	-inf\\
+0.125	-inf\\
+0.25	-inf\\
+0.5	-inf\\
+0.707106781186547	-5\\
+0.707106781186547	-5\\
+0.77110541270397	-1.3\\
+0.840896415253715	-0.6\\
+0.917004043204671	-0.4\\
+1	-0.3\\
+1.09050773266526	-0.4\\
+1.18920711500272	-0.6\\
+1.29683955465101	-1.3\\
+1.4142135623731	-5\\
+1.4142135623731	-5\\
+2	-inf\\
+4	-inf\\
+8	-inf\\
+16	-inf\\
 };
 \end{axis}
 \end{tikzpicture}%
