--- a/Rapport/1Chapters/Filters/Design.tex
+++ b/Rapport/1Chapters/Filters/Design.tex
@@ -1,56 +1,59 @@
-\section{Design}
-This design section will go through the design of the highest lowpass filter with the specification derived from the requirements of band 1 also seen on \autoref{fig:band1_req}.
-\begin{figure}[H]
+\subsection*{Design}
+To take advantage of multirate processing extra octave bands have been added, see \autoref{tb:filterBands}, increasing the number of downsamples which results in the following bands:
+\begin{table}[H]
 \centering
-\begin{subfigure}[t]{0.45\textwidth}
-	\tikzsetnextfilename{Band1Req}
-	\input{figures/Band1Req.tex}
-	\caption{Band 1 requierments.}
-	\label{fig:band1_req}
-\end{subfigure}
-\begin{subfigure}[t]{0.45\textwidth}
-	\tikzsetnextfilename{Band1ReqZoom}
-	\input{figures/Band1ReqZoom.tex}
-	\caption{Band 1 requierments zoomed in.}
-	\label{fig:band1_reqZoom}
-\end{subfigure}
-\caption{Band 1 requierments without and with zoom.}
-\label{fig:band1_reqOverview}
-\end{figure}
+\begin{tabular}{|c|c|c|c|}
+\hline
+       & f1 {[}Hz{]} & fm {[}Hz{]} & f2 {[}Hz{]} \\ \hline
+Band 7 & 2121        & 3000        & 4243        \\ \hline
+Band 6 & 1061        & 1500        & 2121        \\ \hline
+Band 5 & 530,3       & 750         & 1061        \\ \hline
+Band 4 & 265,2       & 375         & 530,3       \\ \hline
+Band 3 & 132,6       & 187,5       & 265,2       \\ \hline
+Band 2 & 66,29       & 93,75       & 132,6       \\ \hline
+Band 1 & 33,15       & 46,87       & 66,29       \\ \hline
+\end{tabular}
+\caption{Bands}
+\label{tb:filterBands}
+\end{table}   
+
+The reason for downsampling seven times is the upper band edge (f2) of band 7. The bandwidth of band 7 until the 
+
+Insert picture of bands.
+
 Two points are selected giving the following specifications to the lowpass filter:
-$F_{pass}=6.000 \enhed{Hz}$\\
+$F_{pass}=3.000 \enhed{Hz}$\\
 $F_{stop}=-1 \enhed{dB}$\\
-$A_{pass}=13.000 \enhed{Hz}$\\
+$A_{pass}=6.500 \enhed{Hz}$\\
 $A_{stop}=-60 \enhed{dB}$\\
 $Fs=48000 \enhed{Hz}$
 The design method used for designing the filter is the Kaiser window method, explained in detail in \autoref{app:FIR_theory}. The reason for using the Kaiser window method is that it gives the approximate order of the filter and the beta value of the window applied to impulse reponse. This means that no trial and error method is needed to meet the requierments of the standard IEC 6964 (2001).
 
 With the specification stated and using the matlab script explained in \autoref{app:FIR_Matlab} which uses the FIR theoy explained in \autoref{app:FIR_theory} about the Kaiser window method and deriving the coefficients of the filter the following filter is calculated. 
-\begin{figure}[H]
-\centering
-\begin{subfigure}[t]{0.47\textwidth}
-	\tikzsetnextfilename{Band1FiltZoom}
-	\scalebox{0.5}{
-	\input{figures/Band1FiltZoom.tex}}
-	\caption{x}
-	\label{fig:band1_filt}
-\end{subfigure}
-\hspace{6mm} 
-\begin{subfigure}[t]{0.35\textwidth}
-	\tikzsetnextfilename{Band1FiltZoom}
-	\scalebox{0.5}{
-	\input{figures/Band1FiltZoom.tex}}
-	\caption{x}
-	\label{fig:band1_filtZoom}
-\end{subfigure}
-\caption{x}
-\label{fig:band1_FiltOverview}
-\end{figure}
+
+% \begin{figure}[H]
+% \centering
+% \begin{subfigure}[t]{0.47\textwidth}
+% 	\tikzsetnextfilename{Band1FiltZoom}
+% 	\scalebox{0.5}{
+% 	\input{figures/Band1FiltZoom.tex}}
+% 	\caption{x}
+% 	\label{fig:band1_filt}
+% \end{subfigure}
+% \hspace{6mm} 
+% \begin{subfigure}[t]{0.35\textwidth}
+% 	\tikzsetnextfilename{Band1FiltZoom}
+% 	\scalebox{0.5}{
+% 	\input{figures/Band1FiltZoom.tex}}
+% 	\caption{x}
+% 	\label{fig:band1_filtZoom}
+% \end{subfigure}
+% \caption{x}
+% \label{fig:band1_FiltOverview}
+% \end{figure}
 
 
-Band 1 requierments with filter.
-Band 1 requierments with filter zoomed in.
-Band 1 requierments with filter without and with zoom.
+
 
 
   
