Skrevet til RMS afsnit

--- a/Rapport/1Chapters/RMS/Model.tex
+++ b/Rapport/1Chapters/RMS/Model.tex
@@ -1,14 +1,13 @@
 \section{Model}
 
-Firstly the models are determined for the lower frequency bands:
+From \autoref{app:journal_speaker_test3} the models are determined for the lower frequency bands:
 \begin{enumerate}
 \item 33 Hz to 66 Hz
 \item 66 Hz to 132 Hz
 \item 132 Hz to 265 Hz
 \item 265 Hz to 530 Hz,
 \end{enumerate}
-Are created. The models are based on experiments documented in \autoref{app:journal_speaker_test3}. The model depicted in \autoref{fig:combineModelreport} shows how THD increases according to the RMS value. 
-
+Are created. The models are based on experiments documented in \autoref{app:journal_speaker_test3}. The model depicted in \autoref{fig:combineModelreport} shows how THD increases according to the RMS value. The RMS value should be seen as relative to the maximum achievable value in the system. 
 
 \begin{figure}[H]
     \centering
